--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Карточки | Проект 1</title>
+  <title> Вот они слева направо</title>
 </head>
 <body>
 <div class="container">
   <div
       class="slide"
-      style="background-image: url('https://images.unsplash.com/photo-1583121274602-3e2820c69888?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');"
+      style="background-image: url('https://img1.teletype.in/files/c4/b8/c4b8de84-111e-4646-9203-a01d26499e21.jpeg');"
   >
-    <h3>Ferrari</h3>
+    <h3>Ким Сокджин</h3>
   </div>
   <div
       class="slide"
