--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
           background-image: url('https://images.unsplash.com/photo-1573950940509-d924ee3fd345?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1696&q=80');
         "
   >
-    <h3>Lamborghini</h3>
+    <h3>Ким Намджун</h3>
   </div>
   <div
       class="slide"
       style="
-          background-image: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1694&q=80');
+          background-image: url('https://avatars.dzeninfra.ru/get-zen_doc/5234501/pub_63696953112e2e1f4a1b8868_6369713af40b3b2e63a15b64/scale_1200');
         "
   >
-    <h3>Camaro</h3>
+    <h3>Мин Юнги</h3>
   </div>
   <!--делаем класс активным active дописали в класс slide 35 строка-->
   <!-- потом убираем slide active - чтобы не было открытым окно -->
   <div
       class="slide" 
       style="
-          background-image: url('https://images.unsplash.com/photo-1535732820275-9ffd998cac22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80');
+          background-image: url('https://i.pinimg.com/originals/c2/08/02/c20802618d890df37103371e1d904623.png');
         "
   >
     <h3>Aston</h3>
