--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           background-image: url('https://i.pinimg.com/originals/c2/08/02/c20802618d890df37103371e1d904623.png');
         "
   >
-    <h3>Aston</h3>
+    <h3>Чон Хосок</h3>
   </div>
   <div
       class="slide"
