--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div
       class="slide"
       style="
-          background-image: url('https://images.unsplash.com/photo-1573950940509-d924ee3fd345?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1696&q=80');
+          background-image: url('https://avatars.dzeninfra.ru/get-zen_doc/1710047/pub_5eac327e25479d02b8e144bb_5eac46fbe5df9626aacca10f/scale_1200');
         "
   >
     <h3>Ким Намджун</h3>
@@ -25,7 +25,7 @@
   <div
       class="slide"
       style="
-          background-image: url('https://avatars.dzeninfra.ru/get-zen_doc/5234501/pub_63696953112e2e1f4a1b8868_6369713af40b3b2e63a15b64/scale_1200');
+          background-image: url('https://teleprogramma.pro/sites/default/files/styles/post_content_1200x675_16_9/public/text-images/2024-02/1y4mcfij_ko_1707309044_1707310409.jpg?itok=8xOgedRg');
         "
   >
     <h3>Мин Юнги</h3>
