--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div
       class="slide"
-      style="background-image: url('https://btsarmy.ru/_nw/2/07218615.jpg');"
+      style="background-image: url('https://kpopping.com/documents/5f/4/3968/ErtZox-UwAA85w9.jpeg?v=a0b77');"
   >
     <h3>Ким Сокджин</h3>
   </div>
@@ -43,7 +43,7 @@
   <div
       class="slide"
       style="
-          background-image: url('https://avatars.dzeninfra.ru/get-zen_doc/163385/pub_618e92bc53d3e444a30366f7_618e92cf97d3131dd6ba16b2/scale_1200');
+          background-image: url('https://kpopping.com/documents/97/1/4961/ErtZoUoUYAIckes.jpeg?v=0814c');
         "
   >
     <h3>Пак Чимин</h3>
@@ -59,7 +59,7 @@
      <div
       class="slide"
       style="
-          background-image: url('https://btsarmy.ru/_nw/2/54070285.jpg');
+          background-image: url('https://kpopping.com/documents/d5/4/3968/ErtZpU6U0AAq_BB.jpeg?v=a0b77');
         "
   >
     <h3>Чон Чонгук</h3>
